version 0.29 ?

* Usage of get_time_tick () with gettimeofday () inside has been 
   decreased by calling it in cycles only for each
   TIME_RECALCULATION_MSG_NUM (10) cycle.
	
* Busy-looping for the default smooth mode has been fixed.
	
* Hyper-mode bug fixed, when CSELECT_IN even was used, when
   CSELECT_OUT was appropriate.

* Hyper-mode bug fixed with no clients scheduling for load, when
   CLIENT_INITIAL_INC=0 or the tag is not defined.


version 0.28 08/04/2007, svn- 270

* Improved validation of environment issue (allowed number of open
   sockets), which are separated to a new file environment.c

* Added PROBLEM-REPORTING file.

* Initial release of our hyper mode. It is really an experimental mode and 
   requires more testing and optimization. But this is a good start - 
   Navigare Nesesse Est. Our goal is to reach 50-100 K of HTTP libcurl
   working connections from a single thread.

* Improved performance of the smooth (default) and hyper
   mode by exluding unnecessary remove and add of a handle
   from/to multihandle in setup_curl_handle () in loader.c.

* Improved preformance of all modes by making patch to libcurl
   (accepted to libcurl mainstream) changing linear traversal of
   curl_multi_remove_handle () to the single-step lookup.

* LOGIN_POST_STR added an option to generate unique users
   with the same password. Thanks to Jeremy Brown 
   <jbrown_at_novell.com> for motivating this feature.

* Improved validation of LOGIN_POST_STR string; the validation moved
   to parse_conf.c. Size of the buffer for the string increased from 64,
   which is not enough,  to 256 bytes. Thanks to Jeremy Brown 
   <jbrown_at_novell.com> for reporting this bug.


version 0.27 svn 227

* Added facility to customize/add/over-write HTTP/FTP headers. 
   Tag CUSTOM_HEADER is serving for this feature. Up to 16 custom 
   HTTP/FTP headers are allowed. 
   If a header already exits by default, the custom header over-writes it. 