@@ -7,3 +7,4 @@ Maxim Kovalenko, <maxkovalenko@gmail.com>
 Arik Nahmany, <Arik.Nahmany@vocaltec.com>
 Evgeniy Polyakov, <johnpol@2ka.mipt.ru>
 Jeremy Brown, ,jbrown@novell.com>
+Alexandre Bezroutchko, <abb@scanit.be>
